# nanoteam

./: README.md  pyproject.toml
src/nanoteam/: claude.py  cli.py  models.py  orchestrator.py  prompts.py  workspace.py
