[project]
name = "nanoteam"
version = "0.1.0"
description = "Multi-agent orchestration for complex coding tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
nanoteam = "nanoteam.cli:main"

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"
